# yyz

./: .gitmodules  CMakeLists.txt  resources.qrc
src/app/: CMakeLists.txt  main.cpp
src/common/utils/: appiconmanager.cpp  appiconmanager.h  misc.cpp  misc.h  traymanager.cpp  traymanager.h  type.h
src/component/: banner.cpp  banner.h  menubar.cpp  menubar.h
src/core/render/: renderopengl.cpp  renderopengl.h
src/core/thread/: videodecoder.cpp  videodecoder.h
src/page/: home.cpp  home.h  login.cpp  login.h
test/component/: CMakeLists.txt  test_banner.cpp
